--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1040,6 +1040,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-2 {
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-rotate-45 {
   --tw-rotate: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1967,6 +1972,14 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-\[100000\] {
+  transition-duration: 100000;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -2220,6 +2233,14 @@ video {
 
   .sm\:w-fiftyPercent {
     width: 50%;
+  }
+
+  .sm\:w-sixtyPercent {
+    width: 60%;
+  }
+
+  .sm\:w-fortyPercent {
+    width: 40%;
   }
 
   .sm\:grid-cols-3 {
