--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 body a, li{
     text-decoration: none;
     list-style: none;
+    overflow: hidden;
 }
 
 /* nav */
@@ -48,7 +49,7 @@ body a, li{
 .hero-img{
     background-image: url("../images/hero_rectangle.png");
     width: 100% !important;
-    min-height: 450px !important;
+    /* min-height: 450px !important; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -111,7 +112,9 @@ body a, li{
     /* margin-left: 1rem; */
 }
 
-
+.custom-col-4{
+    display: block;
+}
 .mission{
  position: absolute;
  top: -15px;
@@ -183,21 +186,25 @@ body a, li{
     /* background-color: #F9FBFA; */
     /* min-height: 300px; */
 }
-.partners-img-1{
-    width: 80%;
+
+
+/* .partners-img-1{
+    width: 80%; 
     margin-top: 4rem;
-    /* margin-left: 1rem; */
+    margin-left: 1rem;
 }
 .partners-img-3{
     width: 50%;
-    margin-top: 1rem;
+    margin-top: 4rem;
+    margin-left: 1rem;
+
 
 }
 .partners-img-4{
     width: 80%;
-    margin-top: 1.5rem;
+    margin-top: 4rem;
 
-}
+} */
 .users-category-detail{
     display: none;
 }
@@ -239,15 +246,16 @@ body a, li{
 .elipse-img{
     width: 100% !important;
 }
-.download-icon{
+/* .download-icon{
     position: absolute;
     top: 10px;
     left: 80px;
     right: -40px;
     width: 65%;
     z-index: 10;
+    display: none;
 
-}
+} */
 .try-out{
     /* margin-right: 1rem 3rem; */
     background-image: url('../images/hero_rectangle.png');
@@ -269,33 +277,12 @@ body a, li{
     z-index: 20;
     }
 
-.arrow-left{
-    position: absolute;
-    top: 400px;
-    left: 180px;
-    background-color: rgb(141, 140, 255, 20%);
-    width: 80px;
-    height: 80px;
-    z-index: 30;
-    border-radius: 50%;
-    cursor: pointer;
-}
-.arrow-right{
-    position: absolute;
-    top: 400px;
-    left: 290px;
-    background-color: rgb(141, 140, 255, 80%);
-    width: 80px;
-    height: 80px;
-    z-index: 30;
-    border-radius: 50%;
-    cursor: pointer;
-}
-.arrow-right:hover{
-    background-color: rgb(141, 140, 255, 150%) !important;
-}
-.arrow-left:hover{
-    background-color: rgb(141, 140, 255, 40%);
+.btn-earn{
+        width: 100% !important;
+        background-color: var(--lightblue) !important;
+        font-family: 'Avenir', sans-serif;
+        font-size: 1.2rem !important;
+        font-weight:200 !important;
 }
 .ellipse{
     width: 500px; 
@@ -320,9 +307,13 @@ body a, li{
     top: 350px;
     left: 280px;
 }
+
 .btn-earn{
-    margin: auto !important;
-    cursor: pointer;
+    width: 100% !important;
+    background-color: var(--lightblue) !important;
+    font-family: 'Avenir', sans-serif;
+    font-size: 1.2rem !important;
+    font-weight:200 !important;
 }
 .why-section{
    background-color: #F6F4F9; 
@@ -350,6 +341,12 @@ body a, li{
     font-weight: 200;
     background-color: transparent !important;
 }
+.custom-active{
+    border-radius: 30px !important;
+    background-color: black !important;
+    color: white !important;
+}
+
 .custom__nav-item:hover{
     border-radius: 30px !important;
     background-color: black !important;
@@ -484,25 +481,112 @@ footer li a:hover{
     font-size: .8rem !important ;
 }
 
-/* @media (max-width:1400px){
 
+/* @media(min-width:1400px){
+    .hero-text{
+        margin-top: 50px !important;
+    }
+    .sav_earn-img{
+        top: 75px;
+        left: 580px !important;
+        width: 100%;
+        z-index: 1;
+
+    }
+    .mission{
+        top: 220px;
+        left: 650px !important;
+        z-index: 10;
+    }
+    .stats-section{
+    margin-top: 10rem !important;
+    }
   
+    .shoppers{
+        position: absolute;
+        top: 100px;
+        left: 150px;
+        width: 40%;
+       
+      }
+
+    .try-out--text{
+        top: 60px;
+        left: 200px;
+    }
+
+    .ellipse{
+        width: 500px; 
+        height: 500px; 
+        background-color: #e5e5e5; 
+        border-radius: 50%;
+    }
+    .circle-left{
+        background-color: rgb(182, 182, 235); 
+        border-radius: 50%;
+        height: 80px; 
+        width: 80px;
+    }
+    .circle-right{
+        background-color: rgb(143 135 246); 
+        border-radius: 50%;
+        height: 80px; 
+        width: 80px;
+    }
+   
+    .partners-img-1{
+        width: 80%;
+        margin-top: 4rem;
+    }
+    .partners-img-3{
+        width: 50%;
+        margin-top: 1rem;
+    
+    }
+    .partners-img-4{
+        width: 80%;
+        margin-top: 1.5rem;
+    
+    }
+
+    .other-question{
+        width: 50%;
+        
+    }
+
+
 } */
+
 @media(min-width:1200px){
+   
+    .hero-text{
+        width: 100%;
+        padding-left: 10%!important;
+        padding-top: 15% !important;
+
+    }
+    .custom-col-4{
+        top: 140px !important;
+    }
     .sav_earn-img{
-        top: 75px;
-        left: 580px !important;
+        top: -30px !important;
+        left: 450px !important;
         width: 100%;
         z-index: 1;
+        
 
     }
     .mission{
-        top: 220px;
+        top: 300px;
         left: 650px !important;
         z-index: 10;
+        width: 50%;
     }
     .stats-section{
     margin-top: 10rem !important;
+    }
+    .btn-custom-2{
+        margin-left: 5%;
     }
   
     .shoppers{
@@ -536,21 +620,28 @@ footer li a:hover{
         height: 80px; 
         width: 80px;
     }
+    .brand-testimonial{
+        /* height: 300px; */
+    }
+    .partners-img{
+        width: 80%;
+        padding: 4rem 0;
+    }
    
-    .partners-img-1{
+    /* .partners-img-1{
         width: 80%;
         margin-top: 4rem;
     }
     .partners-img-3{
         width: 50%;
-        margin-top: 1rem;
+        margin-top: 3rem;
     
     }
     .partners-img-4{
         width: 80%;
-        margin-top: 1.5rem;
+        margin-top: 3rem;
     
-    }
+    } */
 
     .other-question{
         width: 50%;
@@ -559,128 +650,77 @@ footer li a:hover{
 
 
 }
-
-@media(max-width:1200px){
-    .sav_earn-img{
-        top: 75px;
-        left: 580px !important;
-        width: 100%;
-        z-index: 1;
-
-    }
-    .mission{
-        top: 220px;
-        left: 650px !important;
-        z-index: 10;
-    }
-    .stats-section{
-    margin-top: 10rem !important;
-    }
-  
-    .shoppers{
-        position: absolute;
-        top: 100px;
-        left: 150px;
-        width: 40%;
-       
-      }
-
-    .try-out--text{
-        top: 60px;
-        left: 200px;
-    }
-
-    .ellipse{
-        width: 500px; 
-        height: 500px; 
-        background-color: #e5e5e5; 
-        border-radius: 50%;
-    }
-    .circle-left{
-        background-color: rgb(182, 182, 235); 
-        border-radius: 50%;
-        height: 80px; 
-        width: 80px;
-    }
-    .circle-right{
-        background-color: rgb(143 135 246); 
-        border-radius: 50%;
-        height: 80px; 
-        width: 80px;
-    }
-   
-    .partners-img-1{
-        width: 80%;
-        margin-top: 4rem;
-    }
-    .partners-img-3{
-        width: 50%;
-        margin-top: 1rem;
-    
-    }
-    .partners-img-4{
-        width: 80%;
-        margin-top: 1.5rem;
-    
-    }
-
-    .other-question{
-        width: 50%;
-        
-    }
-
-
-}
-@media(max-width:991px){
-    .custom-flex{
-        display: flex !important;
-        flex-direction: row !important;
-        
-    }
-    .btn-custom-2 {
-        margin-top: 1rem;
-        width: 80% !important;
-        border: 2px solid white !important;
-        border-radius: 25px !important;
-    }
-    .btn-custom-1{
-        width: 80% !important;
-    }
-.sav_earn-img{
-    top: -100px;
-    left: 580px !important;
+@media(min-width:992px){
+.hero-text{
     width: 100%;
-    z-index: 1;
-    display:  none !important;
-
+    padding-left: 10% !important;
+}
+.custom-col-4{
+    display: none !important;
+    position: absolute !important;
+    top: 0px;
+    left:0px;
+}
+.sav_earn-img{
+    display: block;
 }
 .mission{
-    left: 650px !important;
-    z-index: 10;
-    display: none !important;
-} 
+    display: block;
+}
+.custom-flex{
+    display: flex !important;
+    flex-direction: row !important;
+    
+}
+.btn-custom-2 {
+    margin-top: 0px;
+    width: 40% !important;
+    
+}
+.btn-custom-1{
+    width: 20% !important;
+    padding: none !important;
+}
+
+.btn-earn{
+    width: 100% !important;
+    background-color: var(--lightblue) !important;
+    font-family: 'Avenir', sans-serif;
+    font-size: 1.2rem !important;
+    font-weight:200 !important;
+}
+
+
+.partners-img{
+    width: 80%;
+    padding: 4rem 0;
+}
+.shoppers{
+    position: absolute;
+    top: 80px;
+    left: 18%  !important;
+    width: 40% !important;
+        
+        }
 .ellipse{
-    width: 400px; 
-    height: 400px; 
+    width: 500px; 
+    height: 500px; 
 }
+/* .ellipse:last-of-type{
+    margin-top: -100px !important;
+
+} */
 .circle-left{
-    background-color: rgb(182, 182, 235); 
-    border-radius: 50%;
-    height: 80px; 
-    width: 80px;
-    top: 280px;
-    left: 110px;
-    /* display: none; */
+    display: block;
+    top: 260px;
+    left: 120px;
+    
+    }
+    .circle-right{
+    display: block;
+    top: 260px;
+    left: 225px;
 }
-.circle-right{
-    background-color: rgb(143 135 246); 
-    border-radius: 50%;
-    height: 80px; 
-    width: 80px;
-    top: 280px;
-    left: 240px;
-    /* display: none; */
-} 
 .shoppers{
     position: absolute;
     top: 50px;
@@ -695,13 +735,6 @@ footer li a:hover{
     width: 100%;
 }
 
-    .mission{
-        left: 350px !important;
-    }
-    .sav_earn-img{
-        left: 390px !important;
-
-    }
    
     .apple{
         top: 210px;
@@ -715,16 +748,6 @@ footer li a:hover{
        
       }
 
-      .arrow-left{
-        top: 300px;
-        left: 140px;
-       
-      }
-      .arrow-right{
-        top: 300px;
-        left: 240px;
-       
-      }
       .scribbling{
         width: 60%;
         top: 110px;
@@ -760,118 +783,158 @@ footer li a:hover{
 }
 
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
+
+    .hero-text{
+        width: 100%;
+        /* padding-left: 10%!important; */
+        padding-top: 15% !important;
+
+    }
+    .custom-col-4{
+        display: block;
+        top: 500px;
+        left:-240px;
+    }
     .sav_earn-img{
-        top: -120px;
+        top: -200px;
         left: 370px !important;
         width: 100%;
         z-index: 5;
-        display: none !important;
     }
     .mission{
         top: -40px;
         left: 420px !important;
         z-index: 10;
         width: 80%;
-        display: none !important;
     } 
+   
+    .scribbling-img{
+        position:absolute;
+        top:-220px;
+        left: 35%;
+        width:55%;
+    }
     .btn-custom-1{
-        width: 80%;
+        width: 0%;
     }
     .btn-custom-2 {
         margin-top: 1rem;
-        width: 80%;
-        border: 2px solid white !important;
-        border-radius: 25px !important;
+        width: 0%;
+        border: none !important;
+        border-radius: 25px !important; 
+    }
+    .btn-earn{
+        width: 100% !important;
+        background-color: var(--lightblue) !important;
+        font-family: 'Avenir', sans-serif;
+        font-size: 1.2rem !important;
+        font-weight:200 !important;
     }
     .elipse-img{
         width: 80% !important;
         padding: 0 1rem;
       }
-      .download-icon{
-        position: absolute;
-        top: 0px;
-        left: 70px;
-        width: 50%;
-        z-index: 10;
+      .ellipse{
+        display:block;
+        width: 350px; 
+        height: 350px; 
+    }
+     
+    .get-app{
+        margin-top: 3rem !important;
+    }
     
-        }
-        .apple{
-            top: 170px;
-            left: 90px;
-            width: 20%;
+    .store{
+        width: 70%;
+    }
             
-            }
-        .google{
-            top: 170px;
-            left: 220px;
-            width: 20%;
-        }
-        .arrow-left{
-            top: 260px;
-            left: 120px;
-            
-            }
-            .arrow-right{
-            top: 260px;
-            left: 225px;
-        }
-
-        .img-text{
-            position: absolute;
-            top: 385px;
-            left: 35px;
-            text-align: center;
-            
-        }
-        .try-out--text{
-            top: 60px;
-            left: 0px;
-            right: 20px;
-        }
-       
-        .subscribe{
-            border-radius: 100px;
-            
-        }
-         /* faq */
-     .other-question{
+    .shoppers{
+        position: absolute;
+        top: 80px;
+        left: 25%;
         width: 50%;
+            
+            }
+    .apple{
+        top: 170px;
+        left: 90px;
+        width: 20%;
+        
+        }
+    .google{
+        top: 170px;
+        left: 220px;
+        width: 20%;
+    }
+    .circle-left{
+        display: none;
+        top: 260px;
+        left: 120px;
+        
+        }
+        .circle-right{
+        display: none;
+        top: 260px;
+        left: 225px;
+    }
+
+    .img-text{
+        position: absolute;
+        top: 385px;
+        left: 35px;
+        text-align: center;
         
     }
+    .try-out--text{
+        top: 60px;
+        left: 0px;
+        right: 20px;
+    }
+    
+    .subscribe{
+        border-radius: 100px;
+        
+    }
+        /* faq */
+    .other-question{
+    width: 50%;
+    
+}
   
 }
 
-@media (max-width: 576px){ 
+@media (min-width: 576px){ 
   
-    /* .sav_earn-img{
-        top: -100px;
-        left: 580px !important;
-        width: 100%;
-        z-index: 1;
-    
-    }
-    .mission{
-        top: -100px;
-        left: 650px !important;
-        z-index: 10;
-    }  */
+ 
+    /* .custom-col-4{
+        display: none;
+    } */
     .hero-text{
         width: 100%;
+        line-height: 50px !important;
+        padding-top: 150px !important;
     }
     .hero-btn{
-        
+        margin-top: 100px;
         width: 100%;
     }
     
     .btn-custom-2 {
         margin-top: 1rem;
         width: 80%;
-        border: 2px solid white !important;
-        border-radius: 25px !important;
+        border: none !important;
+        border-radius: none !important;
     }
     .btn-custom-1{
         width: 80%;
+    }
+    .btn-earn{
+        width: 100% !important;
+        background-color: var(--lightblue) !important;
+        font-family: 'Avenir', sans-serif;
+        font-size: 1.2rem !important;
+        font-weight:200 !important;
     }
     .img-text{
         top:350px;
@@ -881,7 +944,7 @@ footer li a:hover{
         
     }
     .ellipse{
-        display: none !important;
+        display: block !important;
     }
      /* faq */
      .other-question{
@@ -891,6 +954,12 @@ footer li a:hover{
 }
         
 @media (max-width: 375px) {
+    /* .btn-custom-2 {
+        margin-top: 1rem;
+        width: 0%;
+        border: none;
+        border-radius: 25px !important; 
+    } */
 
 /* .cust-logo{
     width: 60%;
@@ -912,14 +981,14 @@ footer li a:hover{
 .elipse-img{
     width: 100% !important;
     }
-.download-icon{
+/* .download-icon{
     position: absolute;
     top: 0px;
     left: 60px;
     width: 50%;
     z-index: 10;
 
-}
+} */
     .apple{
         top: 151px;
         left: 60px;
