--- a/assets/css/impact.css
+++ b/assets/css/impact.css
@@ -45,19 +45,10 @@ body a, li{
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0 auto;
-    border-radius: 20px !important;
+    border-radius: 80px !important;
     
 }
-.hero-text{
-    font-family: 'Avenir', sans-serif;
-    width: 100%;
-    padding: 0rem 15rem;
-    margin: 0 auto;
-}
-.hero-text--heading {
-    padding: 5.5rem 0px 1rem 0px!important;
-    
-}
+
 .hero-text--heading span{
     color: transparent;
   text-shadow: 6px -4px 0px white;
@@ -66,21 +57,37 @@ body a, li{
   
 }
 
-  
 .hero-text--body{
-    max-width: 550px;
-    margin-top: 1rem;
-   
+    width: 60% !important;
+}
+.women-text{
+    font-size: 1.2rem !important;
+}
+.click-here a{
+    font-size: 1rem !important;
+}
+.years{
+    font-size: 1.5rem !important;
+}
+.engaged p{
+    font-size: 3rem !important;
+    
+}
+.engaged span{
+    font-size: 1.3rem !important;
 }
 .sustainable{
     color: var(--purple);
+}
+.click-here{
+    color: #FF3A44;
 }
 
 .scribbling-impact{
     position: absolute;
     width: 25%;
     top: 140px;
-    left: -90px;
+    left: -90px !important;
     
 }
 .circular-scribbling{
@@ -95,11 +102,14 @@ body a, li{
     top: 835px;
     left: 220px;
 }
-.click-here{
-    color: #FF3A44;
-}
+
 
 /* slider */
+.slider-title{
+    font-size: 2rem !important;
+    color: var(--fontblue);
+    font-weight: 700;
+}
 
 .slider-main{
    /* background-color: whitesmoke; */
@@ -112,6 +122,12 @@ body a, li{
     padding: 4rem 4rem !important;
     object-fit: contain;
     
+}
+.carousel-text{
+    background-color: rgba(240, 248, 255, 0.574);
+    color:  var(--fontblue);
+    border-radius: 100px;
+    padding: 0 1rem;
 }
 
 /* content-creators */
@@ -166,90 +182,45 @@ footer li a:hover{
 .reach-out{
     font-size: .8rem !important ;
 }
-@media (max-width:1400px){
-    
-    .content-title{
-        font-size: 2.5rem;
-        margin-bottom: 25px;
-    }
-    .slider-title{
-        font-weight: 700;
-    }
-    .plastic-report{
-        font-size: 1.2rem !important;
-   }
-   .slider-title{
-    font-weight: 700;
-}
-.slider-img{
-    width: 80%;
-    height: 400px !important;
-    padding: 0rem 6rem !important;
-    
-}
-.slider-img-1,.slider-img-2, .slider-img-3, .slider-img-4{
-    height: 400px !important;
-    width: 100% !important;
-    object-fit: contain !important;
-}
-.carousel-caption h5{
-    font-family: "Avenir", sans-serif;
-    font-size:1.5rem;
-    font-weight: bolder !important;
-    color: white !important;
-    background-color: rgba(0, 0, 0, 0.366);
-    display: inline-block;
-}
-.carousel-caption p{
-    color: #f4f4f4 !important;
-    background-color: rgba(0, 0, 0, 0.366);
-    font-size: 1.2rem !important;
-}
-.carousel-caption button{
-   font-weight: 500 !important;
-   text-transform: capitalize;
-   border: 2px solid #ee4138 !important;
-   color: white !important;
-   font-size: 1.2rem;
-   font-family: 'Marck Script', cursive;
-   background-color: transparent !important;
-}
-.plastic-report{
-    font-size: 1.2rem !important;
-}
-}
-@media (max-width:991px){
+
+
+
+
+/* @media (min-width:375px){
     .hero-text{
-        padding: 0rem;
+        font-family: 'Avenir', sans-serif;
+        width: 100%;
+        padding: 0rem 0rem;
+        margin: 0 auto;
     }
+
+.slider-main{
+     min-height: 400px;
+     border-radius: 10px;
+     margin: -30% !important;
+     
+ }
+ 
     .content-title{
-        font-size: 2.5rem;
-        margin-bottom: 25px;
-    }
-    .slider-title{
-        font-weight: 700;
-    }
-    .plastic-report{
-        font-size: 1.2rem !important;
-   }
-   
-}
-@media (max-width:768px){
-    .hero-text{
-        padding: 0rem;
-    }
-    .content-title{
-        font-size: 2.1rem;
+        font-size: 1.8rem;
         margin-bottom: 25px;
     }
     .slider-title{
         font-weight: 500;
     }
-   .plastic-report{
-        font-size: 1.5rem;
+    .custom-container{
+        width: 100% !important;
+    }
+    .custom-warning{
+        background-color: #F6DB49;
+        margin-left: 6%;
+    }
+   .footer-border{
+    border-radius: 40px !important;
    }
-}
-@media (max-width:576px){
+} */
+
+/* @media (min-width:576px){
     .hero-section{
         background-image: url('../images/impact/hero-rectangle.png');
         width: 80% !important;
@@ -292,46 +263,152 @@ footer li a:hover{
         display: none !important;
         
     }
-}
-@media (max-width:375px){
+} */
+/* @media (min-width:768px){
     .hero-text{
-        font-family: 'Avenir', sans-serif;
-        width: 100%;
-        padding: 0rem 0rem;
-        margin: 0 auto;
+        padding: 0rem;
     }
-    /* slider */
-
-.slider-main{
-    /* background-color: whitesmoke; */
-     min-height: 400px;
-     border-radius: 10px;
-     margin: -30% !important;
-     
- }
- 
-    /* .slider-img{
-      
-        width: 100%;
-        height: 350px !important;
-        padding: 0rem 0rem !important;
-        
-    } */
     .content-title{
-        font-size: 1.8rem;
+        font-size: 2.1rem;
         margin-bottom: 25px;
     }
     .slider-title{
         font-weight: 500;
     }
-    .custom-container{
-        width: 100% !important;
+   .plastic-report{
+        font-size: 1.5rem;
+   }
+} */
+@media (min-width:992px){
+    .hero-text{
+        padding: 0rem;
+    }
+    .content-title{
+        font-size: 2.5rem;
+        margin-bottom: 25px;
+    }
+    .slider-title{
+        font-weight: 700;
+    }
+    .plastic-report{
+        font-size: 1.2rem !important;
+   }
+   
+}
+@media (min-width:1200px){
+    
+   
+    .hero-text--heading span{
+      color: transparent;
+      text-shadow: 6px -4px 0px white;
+      -webkit-text-stroke:1px white ;
+    
+      
+    }
+    
+    .hero-text--body{
+        width: 60% !important;
+    }
+    .women-text{
+        font-size: 1.2rem !important;
+    }
+    .click-here a{
+        font-size: 1rem !important;
+    }
+    .years{
+        font-size: 1.5rem !important;
+    }
+    .engaged p{
+        font-size: 3rem !important;
+        
+    }
+    .engaged span{
+        font-size: 1.3rem !important;
+    }
+    .sustainable{
+        color: var(--purple);
+    }
+    .click-here{
+        color: #FF3A44;
+    }
+    
+    .scribbling-impact{
+        position: absolute;
+        width: 25%;
+        top: 140px;
+        left: -90px !important;
+        
+    }
+    .circular-scribbling{
+        position: absolute;
+        width: 20%;
+        top: 300px;
+        left: 220px;
+    }
+    .circular-scribbling-1{
+        position: absolute;
+        width: 20%;
+        top: 835px;
+        left: 220px;
+    }
+    
+    
+    /* slider */
+    .slider-title{
+        font-size: 2rem !important;
+        color: var(--fontblue);
+        font-weight: 700;
+    }
+    
+    .slider-main{
+       /* background-color: whitesmoke; */
+        min-height: 400px;
+        border-radius: 10px;
+    }
+    .slider-img{
+        width: 100%;
+        height: 200px !important;
+        padding: 4rem 4rem !important;
+        object-fit: contain;
+        
+    }
+    .carousel-text{
+        background-color: rgba(240, 248, 255, 0.574);
+        color:  var(--fontblue);
+        border-radius: 100px;
+        padding: 0 1rem;
+    }
+    
+    /* content-creators */
+    .content-creators{
+       font-family: 'Avenir', sans-serif;
+       border: 2px solid white;
+       box-shadow: -7px 7px 2px 0px #E1DFF4;
+       border-radius: 10px;
+       padding: 2rem 0px;
+       margin: 3rem 0;
     }
     .custom-warning{
         background-color: #F6DB49;
-        margin-left: 6%;
     }
-   .footer-border{
-    border-radius: 40px !important;
-   }
+    .custom-container{
+        border: 2px solid black;
+        border-radius: 60px;
+        width: 700px !important;
+        margin: 0 auto;
+        padding: 1.8rem 0;
+       box-shadow: -7px 7px 2px 0px #F6DB49;
+    }
+    
+    /* footer */
+    .subscribe{
+        background-color: var(--lightblue);
+        border-radius: 45px;
+        
+    }
+    .content-title{
+        font-size: 2.5rem;
+        margin-bottom: 25px;
+    }
+   
 }
