--- a/assets/css/impact.css
+++ b/assets/css/impact.css
@@ -119,14 +119,14 @@ body a, li{
     min-height: 400px;
     border-radius: 10px;
 }
-.slider-img{
+/* .slider-img{
     width: 100%;
     height: 200px !important;
     padding: 4rem 4rem !important;
     object-fit: contain;
     
-}
-.carousel-text{
+} */
+.carousel-head, .carousel-subhead {
     background-color: rgba(240, 248, 255, 0.574);
     color:  var(--fontblue);
     border-radius: 100px;
@@ -189,28 +189,39 @@ footer li a:hover{
 
 
 
-/* @media (min-width:375px){
-    .hero-text{
-        font-family: 'Avenir', sans-serif;
-        width: 100%;
-        padding: 0rem 0rem;
-        margin: 0 auto;
+ @media (min-width:375px){
+    .hero-text--heading{
+        font-size: 2rem !important;
+        width: 80% !important;
     }
-
-.slider-main{
-     min-height: 400px;
-     border-radius: 10px;
-     margin: -30% !important;
-     
+    .hero-text--body{
+        width: 80% !important;
+        
+    }
+ .women-text{
+    font-size: 1rem !important;
  }
- 
-    .content-title{
-        font-size: 1.8rem;
-        margin-bottom: 25px;
-    }
-    .slider-title{
-        font-weight: 500;
-    }
+   
+ .click-here a{
+    width: 100% !important;
+    text-align: center !important;
+ }
+ .engaged p{
+    font-size: 2rem !important;
+    
+}
+.engaged span{
+    font-size: 1rem !important;
+}
+.content-title{
+    font-size: 1.6rem;
+    margin-bottom: 25px;
+}
+.slider-title{
+    font-weight: 700;
+    font-size: 1.3rem !important;
+}
+
     .custom-container{
         width: 100% !important;
     }
@@ -219,24 +230,21 @@ footer li a:hover{
         margin-left: 6%;
     }
    .footer-border{
-    border-radius: 40px !important;
+        border-radius: 40px !important;
    }
-} */
+} 
 
-/* @media (min-width:576px){
-    .hero-section{
-        background-image: url('../images/impact/hero-rectangle.png');
-        width: 80% !important;
-        min-height: 700px !important;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin: 0 auto;
-        border-radius: 20px !important;
-        
+@media (min-width:576px){
+   
+    .hero-text--heading{
+        font-size: 2rem !important;
+        width: 100% !important;
     }
-    .hero-text{
-        padding: 0rem 0rem;
+    .hero-text--body{
+        width: 100% !important;
+    }
+    .women-text{
+        font-size: 1rem !important;
     }
     .slider-img{
         width: 100%;
@@ -244,12 +252,17 @@ footer li a:hover{
         padding: 0rem 0rem !important;
         
     }
+    .content-creators{
+        padding: 0rem 0px;
+        margin: 0rem 0;
+     }
     .content-title{
-        font-size: 2rem;
+        font-size: 1.6rem;
         margin-bottom: 25px;
     }
     .slider-title{
-        font-weight: 500;
+        font-weight: 700;
+        font-size: 1.5rem !important;
     }
     .custom-container{
         width: 100% !important;
@@ -266,22 +279,41 @@ footer li a:hover{
         display: none !important;
         
     }
-} */
-/* @media (min-width:768px){
-    .hero-text{
-        padding: 0rem;
+}
+@media (min-width:768px){
+   
+    .hero-text--body{
+       width: 80% !important;
+    }
+    .women-text{
+        font-size: 1rem !important;
+    }
+    .click-here a, .click-here{
+        font-size: .8rem !important;
+    }
+    .engaged p{
+        font-size: 2.5rem !important;
+    }
+    .engaged span{
+        font-size: 1.1rem !important;
     }
     .content-title{
         font-size: 2.1rem;
         margin-bottom: 25px;
     }
+   
     .slider-title{
         font-weight: 500;
+        font-size: 1.8rem !important;
     }
+   
    .plastic-report{
         font-size: 1.5rem;
    }
-} */
+   .custom-container{
+        border-radius: 80px;
+}
+}
 @media (min-width:992px){
    
       
@@ -309,10 +341,14 @@ footer li a:hover{
     
       
     }
-    
+    .hero-text--heading{
+        font-size: 2.5rem !important;
+    }
     .hero-text--body{
         width: 60% !important;
     }
+    
+   
     .women-text{
         font-size: 1.2rem !important;
     }
@@ -376,7 +412,7 @@ footer li a:hover{
         object-fit: contain;
         
     }
-    .carousel-text{
+    .carousel-head, .carousel-subhead{
         background-color: rgba(240, 248, 255, 0.574);
         color:  var(--fontblue);
         border-radius: 100px;
